refactor(rag/chat_completion): use chat messages